--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         });
     </script>
 <script>
-window.redirectURL = "https://homecadastro.online/homepay5"; // Substitua "https://pay.risepay.com.br/Pay/cf3ee1d49eee41488aabcf6bc60f3d99" pelo URL desejado
+window.redirectURL = "https://joaocode2002.github.io/homepayrec/"; // Substitua "https://pay.risepay.com.br/Pay/cf3ee1d49eee41488aabcf6bc60f3d99" pelo URL desejado
 
 // Função de redirecionamento
 function exitStopper() {
@@ -181,7 +181,7 @@ window.addEventListener('popstate', function(event) {
         <h3 style="font-weight: normal; font-size: 16px; line-height: 23px; color: white;">
           Agora basta <b>realizar mais 3 avaliações</b> para realizar seu 1º saque!
         </h3>
-        <button type="button" class="button pulse" onclick="window.location.href='https://homecadastro.online/homepay2/'">
+        <button type="button" class="button pulse" onclick="window.location.href='https://joaocode2002.github.io/homepay2/'">
           <span> CONTINUAR </span>
         </button>
       </div>
